# Outreach-agent

./: .env.example  .gitignore  LICENSE  Makefile  README.md  alembic.ini  main.py  pyproject.toml
agents/: __init__.py
agents/contact_finder/: __init__.py  agent.py  pipeline.py  prompts.py  schema.py
agents/email_writer/: __init__.py  agent.py  pipeline.py  prompts.py  schema.py
agents/feedback/: __init__.py  agent.py  pipeline.py  prompts.py  schema.py
agents/research/: __init__.py  agent.py  pipeline.py  prompts.py  schema.py
config/: __init__.py  settings.py
core/: __init__.py  pipeline.py  state.py  storage.py
db/: __init__.py  base.py  database.py  models.py
docker/: Dockerfile  docker-compose.yml
docker/cron/: crontab  entrypoint.sh
docs/: build_roadmap.md  database.md  product_scope.md
migrations/: env.py
migrations/versions/: 20260622_1945_ac3845289c10_initial_schema.py
searxng-config/: settings.yml
tests/: __init__.py  test_email_writer.py  test_research_agent.py  test_sender.py
utils/: __init__.py  helpers.py  logger.py  retry.py  search_provider.py
